# my-cpp-library

./: .DoxygenFlags  .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: GithubActionsLogs.txt  GithubPipelineNotification.txt
.github/Scripts/: compile.sh  compile_clear.sh  format_code.sh  install_clang_format.sh
.github/workflows/: BadgesUpdater.yml  BuildChecker.yml  BuildCheckerLinux.yml  BuildCheckerMacOS.yml  BuildCheckerWindows.yml  ClangCodeFormatter.yml  CodeFormatter.yml  CommitMetadataGetter.yml  DocumentationUpdater.yml  MainPipeline.yml  TestsChecker.yml  WebhookNotifier.yml
Docs/: Doxyfile
Docs/html/: annotated.html  annotated_dup.js  classes.html  dir_17991c4997c64d26522e170b163298c5.html  dir_1ca03a05e9ebfbad373216881743c89a.html  dir_1ca03a05e9ebfbad373216881743c89a.js  dir_3075ae0af781e00334b850778d11b533.html  dir_3075ae0af781e00334b850778d11b533.js  dir_3462adab492358fea4686d8285b7aa2d.html  dir_3462adab492358fea4686d8285b7aa2d.js  dir_4328894d00551e0375ea282c79285536.html  dir_4328894d00551e0375ea282c79285536.js  dir_4b6197500eda84dde4f76faadd01614c.html  dir_4b6197500eda84dde4f76faadd01614c.js  dir_5ad7f572bbca03234e8e621e192fc099.html  dir_5ad7f572bbca03234e8e621e192fc099.js  dir_68692a05b8b1cce289f48d2fec00c6b2.html  dir_68692a05b8b1cce289f48d2fec00c6b2.js  dir_76052b88e630c54e3fcf5ddbf6d0483d.html  dir_76052b88e630c54e3fcf5ddbf6d0483d.js  dir_850be2ad71087119d32b0f0afa3b7c0f.html  dir_850be2ad71087119d32b0f0afa3b7c0f.js  dir_96e746d2356e7d539d88bb7b9decba09.html  dir_96e746d2356e7d539d88bb7b9decba09.js  dir_9c4e57cec6f58ac1cacc9179d69fff86.html  dir_9c4e57cec6f58ac1cacc9179d69fff86.js  dir_a1628c741ff25f048efd0d096e5d6b96.html  dir_a1628c741ff25f048efd0d096e5d6b96.js  dir_afabf1e6d62fb2078786d781dfaf0587.html  dir_afabf1e6d62fb2078786d781dfaf0587.js  dir_fb6c32c20475b1892c5b5b71c044496a.html  dir_fb6c32c20475b1892c5b5b71c044496a.js  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  (+20 more)
Docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+82 more)
Documentations/: Doxyfile
Documentations/html/: annotated_dup.js  classes.html  dir_17991c4997c64d26522e170b163298c5.js  dir_3462adab492358fea4686d8285b7aa2d.html  dir_9c4e57cec6f58ac1cacc9179d69fff86.html  globals.html  globals_vars.html  hierarchy.html  namespacemembers.html  navtreeindex0.js
Raytracer/: CMakeLists.txt  main.cpp
Scripts/: compile.sh  compile_clear.sh  compile_tests.sh
Template/: CMakeLists.txt  program_main.cpp
Tests/: CMakeLists.txt
Tests/Tests_Library/: CMakeLists.txt  Tests_NumericalParsers.cpp  Tests_Useless.cpp
(+152 files in other folders)
